add route tree
