# server/docs/swagger.yml
@@ -89,105 +89,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
-  # Get all user site
-  /api/userlist/:
-    get:
-      summary: Get all userList
-      tags: [UserList]
-      responses:
-        200:
-          description: Список користувачів сайту.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/userList"
-        401:
-          description: Для цієї дії вам потрібно бути авторизованим.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        500:
-          description: Сталася помилка на серверові. Спробуйте пізніше.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  # Get info User
-  /api/userlist/{idUser}:
-    get:
-      summary: Get one user
-      tags: [UserList]
-      parameters:
-        - id: idUser
-          in: path
-          required: true
-          description: ID користувача для отримання інформації про нього.
-          schema:
-            type: string
-      responses:
-        200:
-          description: У відповідь буде надіслано вся інформація про користувача, окрім паролю.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/infoUser"
-        401:
-          description: Для цієї дії вам потрібно бути авторизованим.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        500:
-          description: Сталася помилка на серверові. Спробуйте пізніше.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-  # Delete user in DB
-  /api/userlist/{idUserDelete}:
-    delete:
-      summary: Delete user from DB
-      tags: [UserList]
-      parameters:
-        - id: idUserDelete
-          in: path
-          required: true
-          description: ID користувача якого буде видалено з БД. Пароль та ID адміністратора.
-          schema:
-            type: string
-          example: 62486da443599f421e33c616
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/userAdmin"
-      responses:
-        200:
-          description: Успіх
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Success"
-        401:
-          description: Для цієї дії вам потрібно бути авторизованим.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        423:
-          description: У вас недостатньо прав для цієї дії, або не правильнно введено пароль.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-        500:
-          description: Сталася помилка на серверові. Спробуйте пізніше.
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-
+  #
 components:
   schemas:
     #
